--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,11 @@
 <div class="home">
     <h1>My homepage</h1>
     <p>This is a sweet website</p>
-    <img src="{{url_for('static',filename='images/freenoteswing.JPG')}}" width ="200" height="200">
+    <img src="{{url_for('static',filename='images/freenotewing.jpg')}}" width ="100" height="100">
+    <img src="{{url_for('static',filename='images/kidglock.jpg')}}" width ="100" height="100">
+    <img src="{{url_for('static',filename='images/mutedglock.jpg')}}" width ="100" height="100">
+    <img src="{{url_for('static',filename='images/balafonRS100x100.jpg')}}" width ="100" height="100">
+    <img src="{{url_for('static',filename='images/Hankdrum.jpg')}}" width ="100" height="100">
     <audio controls>
       <source src="{{url_for('static',filename='mp3/rezsequence.mp3')}}" type="audio/mp3">
     </audio>
