--- a/templates/home.html
+++ b/templates/home.html
@@ -11,5 +11,6 @@
     <audio controls>
       <source src="{{url_for('static',filename='mp3/rezsequence.mp3')}}" type="audio/mp3">
     </audio>
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/249722596&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 </div>
 {%endblock%}
