--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,20 @@
     <h1>My homepage</h1>
     <p>This is a sweet website</p>
     <img src="{{url_for('static',filename='images/freenotewing.jpg')}}" width ="100" height="100">
+    <a href ="http://www.singlecellsoftware.com/node/12625">Caustic sampleset</a>
+    <br>
     <img src="{{url_for('static',filename='images/kidglock.jpg')}}" width ="100" height="100">
+    <a href ="http://www.singlecellsoftware.com/node/12624">Caustic sampleset</a>
+    <br>
     <img src="{{url_for('static',filename='images/mutedglock.jpg')}}" width ="100" height="100">
+    <a href ="http://www.singlecellsoftware.com/node/1282">Caustic sampleset</a>
+    <br>
     <img src="{{url_for('static',filename='images/balafonRS100x100.jpg')}}" width ="100" height="100">
+    <a href ="http://www.singlecellsoftware.com/node/1289">Caustic sampleset</a>
+    <br>
     <img src="{{url_for('static',filename='images/Hankdrum.jpg')}}" width ="100" height="100">
+    <a href ="http://www.singlecellsoftware.com/node/12711">Caustic sampleset</a>
+
     <audio controls>
       <source src="{{url_for('static',filename='mp3/rezsequence.mp3')}}" type="audio/mp3">
     </audio>
