--- a/templates/index.html
+++ b/templates/index.html
@@ -44,14 +44,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+
                     <li>
-                        <a href="#">About</a>
+                      <a href="{{url_for('index')}}">Samplesets</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                      <a href="{{url_for('diy')}}">DIY</a>
                     </li>
                 </ul>
             </div>
@@ -67,17 +65,25 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Sampled Instruments
-                    <small>One-shot samplesets & pattern clips</small>
+                    <small></small>
                 </h1>
             </div>
         </div>
+
+        <div class="row">
+            <p>Listed below are several instruments which I took ("one-shot") recordings of individual notes from simply using an SM57 microphone and M-audio interface.
+Those recordings were subsequently mapped for use in Android/iOS music production apps; specifically FLStudio Mobile's Directwave Sampler and/or Caustic's PCMsynth/Beatbox machines.
+Clicking on the company logos will lead to links to download the samplesets in the respective formats.
+The media players below each instrument image play a short demo .mp3 created using each sampleset.</p>
+        </div>
+
         <!-- /.row -->
 
         <!-- Row 1 -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
               <h3>
-                  <a href="#">Freenotes' Wing</a>
+                  <a href="#">Freenote's Wing</a>
               </h3>
               <table>
                 <tr>
@@ -99,7 +105,7 @@
                 <audio controls>
                   <source src="{{url_for('static',filename='mp3/FREENOTE DEMO GS_2.mp3')}}" type="audio/mp3">
                 </audio>
-                <p>20 Mb; 4 samples stretched across 3 octaves.  Instrument built by David cooke</p>
+                <p>2.7 Mb .pcmsynth .instr </p>
             </div>
             <div class="col-md-4 portfolio-item">
               <h3>
@@ -125,6 +131,7 @@
                 <audio controls>
                   <source src="{{url_for('static',filename='mp3/KIDGLOCKDEMO GS_2.mp3')}}" type="audio/mp3">
                 </audio>
+                <p>1.8 Mb .pcmsynth .instr</p>
             </div>
 
             <div class="col-md-4 portfolio-item">
@@ -149,9 +156,9 @@
                 </tr>
               </table>
               <audio controls>
-                <source src="{{url_for('static',filename='mp3/KIDGLOCKDEMO GS_2.mp3')}}" type="audio/mp3">
+                <source src="{{url_for('static',filename='mp3/.mp3')}}" type="audio/mp3">
               </audio>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida.</p>
+                <p>1.3 Mb .pcmsynth .instr</p>
             </div>
         </div>
         <!-- /.row -->
@@ -180,9 +187,9 @@
                 </tr>
               </table>
                 <audio controls>
-                  <source src="{{url_for('static',filename='mp3/.mp3')}}" type="audio/mp3">
+                  <source src="{{url_for('static',filename='mp3/BALAFONDEMO_2.mp3')}}" type="audio/mp3">
                 </audio>
-                <p>20 Mb; 4 samples stretched across 3 octaves.  Instrument built by David cooke</p>
+                <p>2.2 Mb, .pcmsynth .instr</p>
             </div>
             <div class="col-md-4 portfolio-item">
               <h3>
@@ -202,6 +209,7 @@
                   </td>
                 </tr>
               </table>
+              <p> .beatbox </p>
             </div>
 
             <div class="col-md-4 portfolio-item">
@@ -223,7 +231,7 @@
                   </td>
                 </tr>
               </table>
-
+              <p>1.2 Mb .beatbox </p>
             </div>
         </div>
         <!-- /.row -->
