--- a/templates/diy.html
+++ b/templates/diy.html
@@ -59,9 +59,9 @@
 
     <!-- Page Content -->
     <div class="container">
-      <h1>
-        *Under Construction*
-      </h1>
+      <p>Here is a youtube playlist I made that provides an overview of alot of the "research" I have done with regards to "DIY/repuposed" percussion</p>
+      <p>More info/resources later hopefully</p>
+
      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL9Xui8gQ_v0Itfwc286uGaucYhmpu2ej6" frameborder="0" allowfullscreen></iframe>
    </div>
    </html>
