--- a/templates/index.html
+++ b/templates/index.html
@@ -71,9 +71,13 @@
         </div>
 
         <div class="row">
-            <p>Listed below are several instruments which I took ("one-shot") recordings of individual notes from simply using an SM57 microphone and M-audio interface.
-Those recordings were subsequently mapped for use in Android/iOS music production apps; specifically FLStudio Mobile's Directwave Sampler and/or Caustic's PCMsynth/Beatbox machines.
-Clicking on the company logos will lead to links to download the samplesets in the respective formats.
+            <p>Listed below are several instruments which I took ("one-shot") recordings of individual notes from simply using an SM57 (and AKG D112) microphone(s) and an M-audio interface.
+Those recordings were subsequently mapped for use in Android/iOS music production apps; specifically Caustic's PCMsynth/Beatbox machines and/or FLStudio Mobile's Directwave Sampler.</p>
+<p>
+Clicking on the company logos will lead to links to download the samplesets in the respective formats from the company forums.</p>
+<p>I would like to provide more formats and more intuitive download methods at a later date, and also include tutorial videos.</p>
+
+<p>
 The media players below each instrument image play a short demo .mp3 created using each sampleset.</p>
         </div>
 
@@ -83,7 +87,7 @@ The media players below each instrument image play a short demo .mp3 created usi
         <div class="row">
             <div class="col-md-4 portfolio-item">
               <h3>
-                  <a href="#">Freenote's Wing</a>
+                  Freenote's Wing
               </h3>
               <table>
                 <tr>
@@ -156,7 +160,7 @@ The media players below each instrument image play a short demo .mp3 created usi
                 </tr>
               </table>
               <audio controls>
-                <source src="{{url_for('static',filename='mp3/.mp3')}}" type="audio/mp3">
+                <source src="{{url_for('static',filename='mp3/mutedglock.mp3')}}" type="audio/mp3">
               </audio>
                 <p>1.3 Mb .pcmsynth .instr</p>
             </div>
@@ -167,7 +171,7 @@ The media players below each instrument image play a short demo .mp3 created usi
         <div class="row">
             <div class="col-md-4 portfolio-item">
               <h3>
-                  <a href="#">Balafon</a>
+                  Balafon
               </h3>
               <table>
                 <tr>
@@ -209,6 +213,9 @@ The media players below each instrument image play a short demo .mp3 created usi
                   </td>
                 </tr>
               </table>
+              <audio controls>
+                <source src="{{url_for('static',filename='mp3/hankdrumbuild.mp3')}}" type="audio/mp3">
+              </audio>
               <p> .beatbox </p>
             </div>
 
@@ -231,7 +238,85 @@ The media players below each instrument image play a short demo .mp3 created usi
                   </td>
                 </tr>
               </table>
+              <audio controls>
+                <source src="{{url_for('static',filename='mp3/GANKOGUIDEMO.mp3')}}" type="audio/mp3">
+              </audio>
               <p>1.2 Mb .beatbox </p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!--  Row 3 -->
+        <div class="row">
+            <div class="col-md-4 portfolio-item">
+              <h3>
+                  Cajon
+              </h3>
+              <table>
+                <tr>
+                  <td>
+                    <img class="img-responsive" src="{{url_for('static',filename='images/Cajon.jpeg')}}" width ="100" height="100" alt="">
+                  </td>
+                  <td>
+                    <a href ="http://www.singlecellsoftware.com/node/5579">
+                    <img class="img-responsive" src="{{url_for('static',filename='images/Caustic_logo.png')}}" width ="50" height="50" alt="">
+                    </a>
+                  </td>
+
+                </tr>
+              </table>
+                <audio controls>
+                  <source src="{{url_for('static',filename='mp3/CAJON.mp3')}}" type="audio/mp3">
+                </audio>
+                <p>.beatbox</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
+              <h3>
+                  Doumbek
+              </h3>
+              <table>
+                <tr>
+                  <td>
+                    <img class="img-responsive" src="{{url_for('static',filename='images/doumbek.jpeg')}}" width ="100" height="100" alt="">
+                  <td>
+                    <a href ="http://www.singlecellsoftware.com/node/1594">
+                    <img class="img-responsive" src="{{url_for('static',filename='images/Caustic_logo.png')}}" width ="50" height="50" alt="">
+                    </a>
+                  </td>
+                  <td>
+
+                  </td>
+                </tr>
+              </table>
+              <audio controls>
+                <source src="{{url_for('static',filename='mp3/DOUMBEKDEMO.mp3')}}" type="audio/mp3">
+              </audio>
+              <p> .beatbox </p>
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+              <h3>
+                PVC Flute
+              </h3>
+              <table>
+                <tr>
+                  <td>
+                    <img class="img-responsive" src="{{url_for('static',filename='images/PVCFLUTE.jpg')}}" width ="100" height="100" alt="">
+                  </td>
+                  <td>
+                    <a href ="http://www.singlecellsoftware.com/node/15094">
+                    <img class="img-responsive" src="{{url_for('static',filename='images/Caustic_logo.png')}}" width ="50" height="50" alt="">
+                    </a>
+                  </td>
+                  <td>
+
+                  </td>
+                </tr>
+              </table>
+              <audio controls>
+                <source src="{{url_for('static',filename='mp3/pvcflutebuild.mp3')}}" type="audio/mp3">
+              </audio>
+              <p> .pcmsynth </p>
             </div>
         </div>
         <!-- /.row -->
@@ -279,7 +364,7 @@ The media players below each instrument image play a short demo .mp3 created usi
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p> &copy; 2016</p>
+                    <p> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
                 </div>
             </div>
             <!-- /.row -->
