--- a/templates/index.html
+++ b/templates/index.html
@@ -296,12 +296,12 @@ The media players below each instrument image play a short demo .mp3 created usi
 
             <div class="col-md-4 portfolio-item">
               <h3>
-                PVC Flute
+                PVC Flite
               </h3>
               <table>
                 <tr>
                   <td>
-                    <img class="img-responsive" src="{{url_for('static',filename='images/PVCFLUTE.jpg')}}" width ="100" height="100" alt="">
+                    <img class="img-responsive" src="{{url_for('static',filename='images/pvcflute.jpg')}}" width ="100" height="100" alt="">
                   </td>
                   <td>
                     <a href ="http://www.singlecellsoftware.com/node/15094">
