--- a/templates/index.html
+++ b/templates/index.html
@@ -64,21 +64,14 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Sampled Instruments
-                    <small></small>
+                <center>
+                  <h1 class="page-header">SAMPLED INSTRUMENTS
                 </h1>
+              </center>
             </div>
         </div>
 
-        <div class="row">
-            <p>Listed below are several instruments which I took ("one-shot") recordings of individual notes from simply using an SM57 (and AKG D112) microphone(s) and an M-audio interface.
-Those recordings were subsequently mapped for use in Android/iOS music production apps; specifically Caustic's PCMsynth/Beatbox machines and/or FLStudio Mobile's Directwave Sampler.</p>
-<p>
-Clicking on the company logos will lead to links to download the samplesets in the respective formats from the company forums.</p>
-<p>I would like to provide more formats and more intuitive download methods at a later date, and also include tutorial videos.</p>
 
-<p>
-The media players below each instrument image play a short demo .mp3 created using each sampleset.</p>
         </div>
 
         <!-- /.row -->
@@ -321,7 +314,16 @@ The media players below each instrument image play a short demo .mp3 created usi
         </div>
         <!-- /.row -->
 
+        <!-- /.row EXPLANATION -->
+        <div class="row">
+            <p>Listed above are several instruments which I took ("one-shot") recordings of individual notes from simply using an SM57 (and AKG D112) microphone(s) and an M-audio interface.
+Those recordings were subsequently mapped for use in Android/iOS music production apps; specifically Caustic's PCMsynth/Beatbox machines and/or FLStudio Mobile's Directwave Sampler.</p>
+<p>
+Clicking on the company logos will lead to links to download the samplesets in the respective formats from the company forums.</p>
+<p>I would like to provide more formats and more intuitive download methods at a later date, and also include tutorial videos.</p>
 
+<p>
+The media players below each instrument image play a short demo .mp3 created using each sampleset.</p>
 
 
 
