--- a/templates/diy.html
+++ b/templates/diy.html
@@ -50,6 +50,9 @@
                     <li>
                         <a href="{{url_for('diy')}}">DIY</a>
                     </li>
+                    <li>
+                      <a href="{{url_for('basslines')}}">Basslines</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
