--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
           <ul class="menu">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
+            <li><a href="{{ url_for('basslines') }}">Basslines</a></li>
           </ul>
         </nav></strong>
       </div>
