--- a/templates/basslines.html
+++ b/templates/basslines.html
@@ -81,6 +81,7 @@
 
         <!-- Row 1 -->
         <div class="row">
+             <center>
               <h3>
                   SX Bass
               </h3>
@@ -90,7 +91,7 @@
               <h3>
                   100 bpm A minor
               </h3>
-
+            </center>
 
               <audio controls>
                 <source src="{{url_for('static',filename='basslines/SX/100bpm/Aminor/100AAAAACCCCDDDDDCCCC.wav')}}" type="audio/wav">
