--- a/templates/basslines.html
+++ b/templates/basslines.html
@@ -1,83 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends "layout.html"%}
+{% block title %}DIY{% endblock %}
+{%block content%}
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Basslines By Greg</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{url_for('static',filename='css/3-col-portfolio.css')}}">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Greg Stull Soundlab</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-
-                    <li>
-                      <a href="{{url_for('index')}}">Samplesets</a>
-                    </li>
-                    <li>
-                      <a href="{{url_for('diy')}}">DIY</a>
-                    </li>
-                    <li>
-                      <a href="{{url_for('basslines')}}">Basslines</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <!-- Page Header -->
+      <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
                 <center>
                   <h1 class="page-header">Basslines By Greg
                 </h1>
+                <p>The files listed below are in .wav format and therefore can only be "demoed" in a Chrome browser.
+                   Right click to download for use in your favorite Sampler/Loop Player.</p>
                 </center>
             </div>
         </div>
-
-        <!-- /.row EXPLANATION -->
-
-
-        <!-- /.row -->
 
         <!-- Row 1 -->
         <div class="row">
@@ -87,11 +22,11 @@
               </h3>
                 <img class="img-responsive" src="{{url_for('static',filename='images/SXlongview.jpeg')}}" width ="100" height="100" alt="">
               <br>
-
+              </center>
               <h3>
                   100 bpm A minor
               </h3>
-            </center>
+
 
               <audio controls>
                 <source src="{{url_for('static',filename='basslines/SX/100bpm/Aminor/100AAAAACCCCDDDDDCCCC.wav')}}" type="audio/wav">
@@ -153,16 +88,4 @@
             </div>
             <!-- /.row -->
         </footer>
-
-    </div>
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="static/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="static/js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
+{%endblock%}
