--- a/templates/diy.html
+++ b/templates/diy.html
@@ -1,64 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Greg Stull Soundlab</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{url_for('static',filename='css/3-col-portfolio.css')}}">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Greg Stull Soundlab</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                      <a href="{{url_for('index')}}">Samplesets</a>
-                    </li>
-                    <li>
-                        <a href="{{url_for('diy')}}">DIY</a>
-                    </li>
-                    <li>
-                      <a href="{{url_for('basslines')}}">Basslines</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+{%extends "layout.html"%}
+{% block title %}DIY{% endblock %}
+{%block content%}
 
     <!-- Page Content -->
     <div class="container">
@@ -66,5 +8,4 @@
       <p>More info/resources later hopefully</p>
 
      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL9Xui8gQ_v0Itfwc286uGaucYhmpu2ej6" frameborder="0" allowfullscreen></iframe>
-   </div>
-   </html>
+{%endblock%}
