--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Greg Stull Soundlab</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{url_for('static',filename='css/3-col-portfolio.css')}}">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Greg Stull Soundlab</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-
-                    <li>
-                      <a href="{{url_for('index')}}">Samplesets</a>
-                    </li>
-                    <li>
-                      <a href="{{url_for('diy')}}">DIY</a>
-                    </li>
-                    <li>
-                      <a href="{{url_for('basslines')}}">Basslines</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
+{%extends "layout.html"%}
+{% block title %}Samplesets{% endblock %}
+{%block content%}
     <!-- Page Content -->
-    <div class="container">
 
+
+        <!-- Page Header -->
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
@@ -74,10 +15,7 @@
             </div>
         </div>
 
-        <!-- /.row EXPLANATION -->
-
-
-        <!-- /.row -->
+              <!-- /.row -->
 
         <!-- Row 1 -->
         <div class="row">
@@ -292,12 +230,12 @@
 
             <div class="col-md-4 portfolio-item">
               <h3>
-                PVC Flite
+                PVC Flute
               </h3>
               <table>
                 <tr>
                   <td>
-                    <img class="img-responsive" src="{{url_for('static',filename='images/pvcflute.jpg')}}" width ="100" height="100" alt="">
+                    <img class="img-responsive" src="{{url_for('static',filename='images/PVCFLUTE.jpg')}}" width ="100" height="100" alt="">
                   </td>
                   <td>
                     <a href ="http://www.singlecellsoftware.com/node/15094">
@@ -316,7 +254,6 @@
             </div>
         </div>
         <!-- /.row -->
-
         <div class="row">
             <p>Listed above are several instruments which I took ("one-shot") recordings of individual notes from simply using an SM57 (and AKG D112) microphone(s) and an M-audio interface.
         Those recordings were subsequently mapped for use in Android/iOS music production apps; specifically Caustic's PCMsynth/Beatbox machines and/or FLStudio Mobile's Directwave Sampler.</p>
@@ -328,43 +265,6 @@
         The media players below each instrument image play a short demo .mp3 created using each sampleset.</p>
         </div>
 
-
-
-        <hr>
-
-        <!-- Pagination
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-      -->
-        <!-- /.row -->
-
-        <hr>
-
         <!-- Footer -->
         <footer>
             <div class="row">
@@ -375,15 +275,6 @@
             <!-- /.row -->
         </footer>
 
-    </div>
+
     <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="static/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="static/js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
+{%endblock%}
