--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
               <table>
                 <tr>
                   <td>
-                    <img class="img-responsive" src="{{url_for('static',filename='images/PVCFLUTE.jpg')}}" width ="100" height="100" alt="">
+                    <img class="img-responsive" src="{{url_for('static',filename='images/pvcflute.jpg')}}" width ="100" height="100" alt="">
                   </td>
                   <td>
                     <a href ="http://www.singlecellsoftware.com/node/15094">
