--- a/templates/diy.html
+++ b/templates/diy.html
@@ -4,6 +4,7 @@
 
     <!-- Page Content -->
     <div class="container">
+  <p>HI GREG!!!!!!</p>
       <p>Here is a youtube playlist I made that provides an overview of alot of the "research" I have done with regards to "DIY/repuposed" percussion</p>
       <p>More info/resources later hopefully</p>
 
