--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -14,25 +14,25 @@
       <h1>Greg's Personal Project Portal</h1>
       <p>Music | Maintenance | Cooking | Code</p>
       <img src = "images/futonophon.jpg" alt = "futon O  phone" width = 100 height =100>
-      <img src = "images/cellphonemount1.jpg" alt = "DIY cell phone mount">
-      <img src = "images/collardsCheap.jpg" alt = "collard greens">
+      <img src = "images/cellphonemount1.jpg" alt = "DIY cell phone mount" width = 100 height =100>
+      <img src = "images/collardsCheap.jpg" alt = "collard greens" width = 100 height =100>
 
       <section class = "project">
         <h2 class ="project_category">Music</h2>
 
         <p>Drum triggers, piezos, DIY ekit (fail?), and converting Rock Band pads</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/EPOF0C-PpsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="240" height="135" src="https://www.youtube.com/embed/EPOF0C-PpsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Four Layered percussion piece ideas</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="240" height="135" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>"Repurposed Percussion" Drum Circle at Barcamp</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="240" height="135" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Cajon (as guitar accompaniement)</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SqKfRCv1VYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="240" height="135" src="https://www.youtube.com/embed/SqKfRCv1VYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>cajon clinic at Bside Vintage</p>
         <a href = "https://www.facebook.com/ShawnsGuitarLessons/videos/2318836454906571/">Cajon/shakers to emulate drumkit talk</a>
         <p>"Fruity Loops", Caustic, LMMS -synths, samplers, sequencers, and such</p>
         <p>neither proud nor ashamed</p>
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2523566&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <iframe width="20%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2523566&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
       </section>
 
@@ -65,7 +65,7 @@
         </article>
         <p>Surviving Single / Grocery Cost Calculator</p>
         <a href = "https://www.cooksmarts.com/">Cooksmarts</a>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL9Xui8gQ_v0LZVHOp0EVY9GXK6kiYKbIR" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PL9Xui8gQ_v0LZVHOp0EVY9GXK6kiYKbIR" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <article>
         <a href ="https://github.com/videzyrah">My github</a>
