--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -11,6 +11,7 @@
     </head>
 <!-- Thing's greg has spent a lot of time thinking about that he probably wishes people would listen to him talk about -->
     <body>
+<img class="img-responsive" src="{{url_for('static',filename='images/freenotewing.jpg')}}" width ="100" height="100" alt="">
       <h1>Greg's Personal Project Portal</h1>
       <p>Music | Maintenance | Cooking | Code</p>
       <img src = "images/futonophon.jpg" alt = "futon O  phone" width = 100 height =100>
