--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -11,12 +11,12 @@
     </head>
 <!-- Thing's greg has spent a lot of time thinking about that he probably wishes people would listen to him talk about -->
     <body>
-<img class="img-responsive" src="{{url_for('static',filename='images/freenotewing.jpg')}}" width ="100" height="100" alt="">
+
       <h1>Greg's Personal Project Portal</h1>
       <p>Music | Maintenance | Cooking | Code</p>
-      <img src = "images/futonophon.jpg" alt = "futon O  phone" width = 100 height =100>
-      <img src = "images/cellphonemount1.jpg" alt = "DIY cell phone mount" width = 100 height =100>
-      <img src = "images/collardsCheap.jpg" alt = "collard greens" width = 100 height =100>
+      <img class="img-responsive" src="{{url_for('static',filename='images/futonophon.jpg')}}" width ="100" height="100" alt="futonophon">
+    <img class="img-responsive" src="{{url_for('static',filename='images/collardsCheap.jpg')}}" width ="100" height="100" alt="futonophon">
+    <img class="img-responsive" src="{{url_for('static',filename='images/cellphonemount1.jpg')}}" width ="100" height="100" alt="futonophon">
 
       <section class = "project">
         <h2 class ="project_category">Music</h2>
