--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -13,8 +13,8 @@
   <img class="img-responsive" src="{{url_for('static',filename='images/futonophon.jpg')}}" width ="100" height="100" alt="futonophon">
   <img class="img-responsive" src="{{url_for('static',filename='images/collardsCheap.jpg')}}" width ="100" height="100" alt="futonophon">
   <img class="img-responsive" src="{{url_for('static',filename='images/cellphonemount1.jpg')}}" width ="100" height="100" alt="futonophon">
-  <section id="project">
-    <h2 class ="project_category">Music</h2>
+  <section id="music">
+    <h2>Music</h2>
     <article class="backstory">
     <p>I play drums on sundays.</p>
     </article>
@@ -33,12 +33,12 @@
     <iframe width="20%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2523566&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   </section>
 
-  <section id="project">
-    <h2 class ="project_category">Food Preparation (Cooking / Meal Planning)</h2>
+  <section id="food">
+    <h2  ="project_category">Food Preparation (Cooking / Meal Planning)</h2>
   </section>
 
-  <section class = "project">
-    <h2 class ="project_category">Code / Web Ideas</h2>
+  <section id="code">
+    <h2>Code / Web Ideas</h2>
     <article>
     <a href ="https://gregstullgainesvilletest1.herokuapp.com/">Percussion Samples</a>
     </article>
@@ -58,10 +58,10 @@
     <p>ShareShack</p>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
     <p>This can be done with Django by repurposing the "local library tutorial on MDN"</p>
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django"></a>
     </article>
     <p>Surviving Single / Grocery Cost Calculator</p>
-    <a href ="https://www.cooksmarts.com/">Cooksmarts</a>
+    <a href ="https://www.cooksmarts.com/">Cooksmarts></a>
     <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PL9Xui8gQ_v0LZVHOp0EVY9GXK6kiYKbIR" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <article>
