--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -13,28 +13,38 @@
   <img class="img-responsive" src="{{url_for('static',filename='images/futonophon.jpg')}}" width ="100" height="100" alt="futonophon">
   <img class="img-responsive" src="{{url_for('static',filename='images/collardsCheap.jpg')}}" width ="100" height="100" alt="futonophon">
   <img class="img-responsive" src="{{url_for('static',filename='images/cellphonemount1.jpg')}}" width ="100" height="100" alt="futonophon">
-  <section id="music">
+<section id="preamble">
+<p>Hi,I'm Greg.  I have thought, researched,  and/or worked on a number of things that I feel worthy of sharing.</p>
+</section
+<section id="music">
     <h2>Music</h2>
     <article class="backstory">
-    <p>I play drums on sundays.</p>
+    <p>I have played drumset for a few "local" bands but I have also tried to branch out from that</p>
+    <p> This includes studying "world" percussion and testing the layering of different sounds</p>
+
     </article>
-    <p>Drum triggers, piezos, DIY ekit (fail?), and converting Rock Band pads</p>
-    <iframe width="240" height="135" src="https://www.youtube.com/embed/EPOF0C-PpsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Four Layered percussion piece ideas</p>
-    <iframe width="240" height="135" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
     <p>"Repurposed Percussion" Drum Circle at Barcamp</p>
-    <iframe width="240" height="135" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p>Drum triggers, piezos, DIY ekit (fail?), and converting Rock Band pads</p>
+
+
+
     <p>Cajon (as guitar accompaniement)</p>
-    <iframe width="240" height="135" src="https://www.youtube.com/embed/SqKfRCv1VYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <p>cajon clinic at Bside Vintage</p>
     <a href = "https://www.facebook.com/ShawnsGuitarLessons/videos/2318836454906571/">Cajon/shakers to emulate drumkit talk</a>
     <p>"Fruity Loops", Caustic, LMMS -synths, samplers, sequencers, and such</p>
     <p>neither proud nor ashamed</p>
-    <iframe width="20%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2523566&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+
   </section>
 
   <section id="food">
-    <h2  ="project_category">Food Preparation (Cooking / Meal Planning)</h2>
+    <h2>Food Preparation (Cooking / Meal Planning)</h2>
   </section>
 
   <section id="code">
@@ -60,16 +70,17 @@
     <p>This can be done with Django by repurposing the "local library tutorial on MDN"</p>
     <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django"></a>
     </article>
+    <article>
     <p>Surviving Single / Grocery Cost Calculator</p>
-    <a href ="https://www.cooksmarts.com/">Cooksmarts></a>
-    <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PL9Xui8gQ_v0LZVHOp0EVY9GXK6kiYKbIR" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+    <p><a href ="https://www.cooksmarts.com/">Cooksmarts</a></p>
+    </article>
     <article>
     <a href ="https://github.com/videzyrah">My github</a>
     </article>
   </section>
 
-  <section class = "project">
+  <section id="maintenance">
     <h2 class ="project_category">Maintenance, "Hacks", etc.</h2>
   </section>
 
