--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -31,11 +31,12 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <p>Drum triggers, piezos, DIY ekit (fail?), and converting Rock Band pads</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EPOF0C-PpsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
     <p>Cajon (as guitar accompaniement)</p>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SqKfRCv1VYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>cajon clinic at Bside Vintage</p>
     <a href = "https://www.facebook.com/ShawnsGuitarLessons/videos/2318836454906571/">Cajon/shakers to emulate drumkit talk</a>
     <p>"Fruity Loops", Caustic, LMMS -synths, samplers, sequencers, and such</p>
