--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -25,8 +25,8 @@
     </article>
     <p>Four Layered percussion piece ideas</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
+<p>percussion in the park</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bNjDnxC--b8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>"Repurposed Percussion" Drum Circle at Barcamp</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
