ppp music language

--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -19,29 +19,24 @@
 <section id="music">
     <h2>Music</h2>
     <article class="backstory">
-    <p>I have played drumset for a few "local" bands but I have also tried to branch out from that</p>
-    <p> This includes studying "world" percussion and testing the layering of different sounds</p>
-
+    <p>I have played drumset for a few "local" bands but I have also tried to branch out from that.</p>
+    <p>This includes studying "world" percussion and testing the layering of different sounds.</p>
+    <p>I seem to prefer engaging in collaborative projects rather than dealing with decision process alone.</p>
+    <p>Similarly, when acting alone I tend to attempt to outline ways for others to be creative (or to colaborate with me).</p>
     </article>
+    <p>Thus, these are a few videos I mad in that vain</p>
     <p>Four Layered percussion piece ideas</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>percussion in the park</p>
+    <p>Percussion in the park</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bNjDnxC--b8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>"Repurposed Percussion" Drum Circle at Barcamp</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1PZIxYYIAhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
     <p>Drum triggers, piezos, DIY ekit (fail?), and converting Rock Band pads</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EPOF0C-PpsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-
     <p>Cajon (as guitar accompaniement)</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SqKfRCv1VYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>cajon clinic at Bside Vintage</p>
-    <a href = "https://www.facebook.com/ShawnsGuitarLessons/videos/2318836454906571/">Cajon/shakers to emulate drumkit talk</a>
     <p>"Fruity Loops", Caustic, LMMS -synths, samplers, sequencers, and such</p>
     <p>neither proud nor ashamed</p>
-
   </section>
 
   <section id="food">
