--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -19,12 +19,12 @@
 <section id="music">
     <h2>Music</h2>
     <article class="backstory">
-    <p>I have played drumset for a few "local" bands but I have also tried to branch out from that.</p>
-    <p>This includes studying "world" percussion and testing the layering of different sounds.</p>
-    <p>I seem to prefer engaging in collaborative projects rather than dealing with decision process alone.</p>
-    <p>Similarly, when acting alone I tend to attempt to outline ways for others to be creative (or to colaborate with me).</p>
+    <p>I have played drumset for a few "local" bands but I have also tried to branch out from that.
+  This includes studying "world" percussion and testing the layering of different sounds.
+    I seem to prefer engaging in collaborative projects rather than dealing with decision process alone.
+  Similarly, when acting alone I tend to attempt to outline ways for others to be creative (or to colaborate with me).</p>
     </article>
-    <p>Thus, these are a few videos I mad in that vain</p>
+    <p>Thus, these are a few videos I have made in that vain:</p>
     <p>Four Layered percussion piece ideas</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3Pf0BlNbtq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Percussion in the park</p>
