--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -21,7 +21,7 @@
     <article class="backstory">
     <p>I have played drumset for a few "local" bands but I have also tried to branch out from that.
   This includes studying "world" percussion and testing the layering of different sounds.
-    I seem to prefer engaging in collaborative projects rather than dealing with decision process alone.
+    I seem to prefer engaging in collaborative projects rather than dealing with decision processes alone.
   Similarly, when acting alone I tend to attempt to outline ways for others to be creative (or to colaborate with me).</p>
     </article>
     <p>Thus, these are a few videos I have made in that vain:</p>
@@ -35,12 +35,17 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EPOF0C-PpsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Cajon (as guitar accompaniement)</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SqKfRCv1VYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>"Fruity Loops", Caustic, LMMS -synths, samplers, sequencers, and such</p>
-    <p>neither proud nor ashamed</p>
+    <p>I have also spent alot of time tinkering with "electronic music" software/apps such as FlStudio and Caustic</p>
   </section>
 
   <section id="food">
     <h2>Food Preparation (Cooking / Meal Planning)</h2>
+    <p>One of the main problems in my life is figuring out how to feed myself...
+      I hope to help others that struggle similarly by creating recipes and/or meal plans
+      dedicated to single people.  I got a mini InstantPot for christmas and I am really enjoying
+      figuring out new recipes that I consider better than what came in the provided recipe book...
+      Basically I want to discuss all the knowledge I wish I had 25 years ago.
+    </p>
   </section>
 
   <section id="code">
