--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -51,6 +51,18 @@
   <section id="code">
     <h2>Code / Web Ideas</h2>
     <article>
+    <p>Surviving Single / Grocery Cost Calculator</p>
+    <p><a href ="https://www.cooksmarts.com/">Cooksmarts</a></p>
+    </article>
+    <article>
+    <p>Tuesdays are Terrible</p>
+    <a href ="https://www.t-mobile.com/offers/t-mobile-tuesdays"></a>
+    </article>
+    <article>
+    <p>Garden Patch Match</p>
+    <a href ="https://codepen.io/theothergregstull/pen/xobwPv">gpm</a>
+    </article>
+    <article>
     <a href ="https://gregstullgainesvilletest1.herokuapp.com/">Percussion Samples</a>
     </article>
     <article>
@@ -58,24 +70,12 @@
     <a href ="https://awesomegregmath.herokuapp.com/decInches">Wind Chime Calculator</a>
     </article>
     <article>
-    <p>Garden Patch sMatch</p>
-    <a href ="https://codepen.io/theothergregstull/pen/xobwPv">gpm</a>
-    </article>
-    <article>
-    <p>Tuesdays are Terrible</p>
-    <a href ="https://www.t-mobile.com/offers/t-mobile-tuesdays">S</a>
-    </article>
-    <article>
     <p>ShareShack</p>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
     <p>This can be done with Django by repurposing the "local library tutorial on MDN"</p>
     <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django"></a>
     </article>
-    <article>
-    <p>Surviving Single / Grocery Cost Calculator</p>
 
-    <p><a href ="https://www.cooksmarts.com/">Cooksmarts</a></p>
-    </article>
     <article>
     <a href ="https://github.com/videzyrah">My github</a>
     </article>
