--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -49,18 +49,28 @@
   </section>
 
   <section id="code">
-    <h2>Code / Web Ideas</h2>
+    <h2>Code / Web /Entrpreneurial Ideas and Experiences</h2>
+    <h3>Startup Weekend Pitches and Participation</h3>
+
     <article>
-    <p>Surviving Single / Grocery Cost Calculator</p>
-    <p><a href ="https://www.cooksmarts.com/">Cooksmarts</a></p>
+    <h4>Surviving Single / Grocery Cost Calculator</h4>
+    <p>I pitched "Surving Single"; I was unable to gather teamates to work on the idea of a meal panning/recipe site for single people.</p>
+    <p>I haven't given up on this.  I am aware that some people use <a href ="https://www.cooksmarts.com/">Cooksmarts</a></p>
+    <p>The team I joined instead was hoping to start a local brewery.  I enjoyed brainstorming with them.</p>
     </article>
+
     <article>
-    <p>Tuesdays are Terrible</p>
+    <h4>Double ended clips</h4>
+    <p>I glued together two wooden clothes pins, it works great as such. I eventually figured out how to 3D print some parts.</p>
+    </article>
+
+    <article>
+    <h4>Tuesdays are Terrible</h4>
     <a href ="https://www.t-mobile.com/offers/t-mobile-tuesdays"></a>
     </article>
     <article>
-    <p>Garden Patch Match</p>
-    <a href ="https://codepen.io/theothergregstull/pen/xobwPv">gpm</a>
+    <h4>Garden Patch Match</h4>
+    <a href ="https://codepen.io/theothergregstull/pen/xobwPv">An attempt to prototype a gui for displaying possible bartering connections/a>
     </article>
     <article>
     <a href ="https://gregstullgainesvilletest1.herokuapp.com/">Percussion Samples</a>
@@ -70,7 +80,7 @@
     <a href ="https://awesomegregmath.herokuapp.com/decInches">Wind Chime Calculator</a>
     </article>
     <article>
-    <p>ShareShack</p>
+    <h4>ShareShack</h4>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
     <p>This can be done with Django by repurposing the "local library tutorial on MDN"</p>
     <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django"></a>
