--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name = "viewport" content = "width-device-width, initial-scale=1.0">
   <title>Greg's Personal Project Portal</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="{{url_for('static',filename='css/ppp.css')}}">
 </head>
 <!-- Thing's greg has spent a lot of time thinking about that he probably wishes people would listen to him talk about -->
 <body>
@@ -83,7 +83,7 @@
     <h4>ShareShack</h4>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
     <p>This can be done with Django by repurposing the "local library tutorial on MDN"</p>
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django"></a>
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Mozilla Developer Network Django Tutorial</a>
     </article>
 
     <article>
