--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -91,10 +91,10 @@
     </article>
   </section>
 
-  <section id="maintenance">
+  <!-- <section id="maintenance">
     <h2 class ="project_category">Maintenance, "Hacks", etc.</h2>
   </section>
-
+    -->
 
 
 </body>
