--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -49,46 +49,52 @@
   </section>
 
   <section id="code">
-    <h2>Code / Web /Entrpreneurial Ideas and Experiences</h2>
     <h3>Startup Weekend Pitches and Participation</h3>
 
     <article>
     <h4>Surviving Single / Grocery Cost Calculator</h4>
-    <p>I pitched "Surving Single"; I was unable to gather teamates to work on the idea of a meal panning/recipe site for single people.</p>
-    <p>I haven't given up on this.  I am aware that some people use <a href ="https://www.cooksmarts.com/">Cooksmarts</a></p>
-    <p>The team I joined instead was hoping to start a local brewery.  I enjoyed brainstorming with them.</p>
+    <p>-February 2017 competion</p>
+    <p>Pitch: "Surviving Single." I was unable to gather teamates to work on the idea of a meal panning/recipe site for single people.</p>
+    <p>Participation: The team I joined instead was hoping to start a brew pub.  I enjoyed brainstorming with them.</p>
+    <p>Aftermath: I haven't given up on "Survivning Single".  I am aware that a few people use <a href ="https://www.cooksmarts.com/">Cooksmarts</a> I have some Django code in my github.  But more recently I am considering just making a youtube channel with some Instapot recipes I have created. I think at least two more brew pubs have opened up since then</p>
     </article>
 
     <article>
     <h4>Double ended clips</h4>
-    <p>I glued together two wooden clothes pins, it works great as such. I eventually figured out how to 3D print some parts.</p>
+    <p>-October  2018 competion</p>
+    <p>Pitch: I glued together two wooden clothes pins, hoped to get some marketing people to make a funny sales video like shamwow. </p>
+    <p>Participation: I joined a team attempting to create a collaboration matching service for persons doing academic research sorts of things.  The team finished in second place.</p>
+    <p>Aftermath:I eventually figured out how to 3D print some parts. But you can buy clothespins at walmart for $0.02 each. i.e. not a monetizable idea.</p>
     </article>
 
     <article>
     <h4>Tuesdays are Terrible</h4>
-    <a href ="https://www.t-mobile.com/offers/t-mobile-tuesdays"></a>
+    <p>-May 2019 competition</p>
+    <p>Pitch: I tried to pitch something even funnier that maybe some people would like to spend a weekend working on. I.e. a marketing app that lists restaurants that have Taco Tuesday night. So, my pitch got the most laughs but not a team.</P
+    <p>Participation: I joined a team that was hoping to develop a system to match people with vacant urban land with people that would use said land to grow vegetables.</p>
+    <p>Aftermath: funny enough (I found out later); T-Mobile promotes affiliate businesses on Tuesdays and calls it "T-mobile Tuesdays."  Also I attempted to develop a hypothetical GUI for project management overview of coordinated community planting of vegetables on codepen: </p>
+    <a href="https://codepen.io/theothergregstull/pen/xobwPv">An attempt to prototype a gui for displaying possible bartering connections</a>
     </article>
+
+    <h3>Webpages and the whatnot</h3>
     <article>
-    <h4>Garden Patch Match</h4>
-    <a href ="https://codepen.io/theothergregstull/pen/xobwPv">An attempt to prototype a gui for displaying possible bartering connections/a>
-    </article>
-    <article>
+    <h4>Greg Stull Sound Lab</h4>
     <a href ="https://gregstullgainesvilletest1.herokuapp.com/">Percussion Samples</a>
     </article>
+
     <article>
     <p>A simple python/Flask based web app for calculating the node points on windchimes, xylophnes, etc.</p>
     <a href ="https://awesomegregmath.herokuapp.com/decInches">Wind Chime Calculator</a>
     </article>
+
     <article>
     <h4>ShareShack</h4>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
-    <p>This can be done with Django by repurposing the "local library tutorial on MDN"</p>
+    <p>This can be done with Django by  the "local library tutorial on MDN"</p>
     <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Mozilla Developer Network Django Tutorial</a>
     </article>
 
-    <article>
-    <a href ="https://github.com/videzyrah">My github</a>
-    </article>
+
   </section>
 
   <!-- <section id="maintenance">
