--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -48,7 +48,7 @@
     </p>
   </section>
 
-  <section id="code">
+  <section id="startUpWeekend">
     <h3>Startup Weekend Pitches and Participation</h3>
 
     <article>
@@ -76,24 +76,27 @@
     <a href="https://codepen.io/theothergregstull/pen/xobwPv">An attempt to prototype a gui for displaying possible bartering connections</a>
     </article>
 
+  </section>
+  <section id="webpages">
     <h3>Webpages and the whatnot</h3>
     <article>
     <h4>Greg Stull Sound Lab</h4>
+    <p>A webpage where I provide sound sample content.</p>
     <a href ="https://gregstullgainesvilletest1.herokuapp.com/">Percussion Samples</a>
     </article>
 
     <article>
-    <p>A simple python/Flask based web app for calculating the node points on windchimes, xylophnes, etc.</p>
-    <a href ="https://awesomegregmath.herokuapp.com/decInches">Wind Chime Calculator</a>
+    <h4>Wind Chime Node finder</h4>
+    <p>A simple python/Flask based web app for calculating the node points on windchimes, xylophones, idiophones, etc. This means where to drill holes or hold them</p>
+    <a href ="https://awesomegregmath.herokuapp.com/decInches">Wind Chime App</a>
     </article>
 
     <article>
     <h4>ShareShack</h4>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
-    <p>This can be done with Django by  the "local library tutorial on MDN"</p>
+    <p>I have code for it on my github, but honestly the Django tutorials on mdn: could be a better resource for anyone trying to do a similar project.</p>
     <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Mozilla Developer Network Django Tutorial</a>
     </article>
-
 
   </section>
 
