--- a/templates/chimes.html
+++ b/templates/chimes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <title>Wind Chime Node Finder</title>
   <head>
-    <link href="../static/chimes.css" rel="stylesheet">
+    <link href="../static/css/chimes.css" rel="stylesheet">
   </head>
    <body>
 <!--
