--- a/templates/darkgourds.html
+++ b/templates/darkgourds.html
@@ -3,6 +3,8 @@
 <body>
 <center> <h1>Dark Gourds </h1></center>
 
+<a href="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/darkgourdsplaylist.m3u/">Click here to open Playlist (.m3u) in your media player </a>
+
 
 <h1> Phantom Flatulence </h1>
 <audio controls>  
