--- a/templates/ppp.html
+++ b/templates/ppp.html
@@ -88,13 +88,15 @@
     <article>
     <h4>Wind Chime Node finder</h4>
     <p>A simple python/Flask based web app for calculating the node points on windchimes, xylophones, idiophones, etc. This means where to drill holes or hold them</p>
-    <a href ="https://awesomegregmath.herokuapp.com/decInches">Wind Chime App</a>
+    <a href ="https://awesomegregmath.herokuapp.com/chimes">Wind Chime App</a>
     </article>
 
     <article>
     <h4>ShareShack</h4>
     <p>I attempted to create code for a tool library; for the Repurpose Project.</p>
-    <p>I have code for it on my github, but honestly the Django tutorials on mdn: could be a better resource for anyone trying to do a similar project.</p>
+    <a href="http://gstull.pythonanywhere.com/">my first Inventory/User CRUD app</a>
+	
+	
     <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Mozilla Developer Network Django Tutorial</a>
     </article>
 
