--- a/templates/darkgourds.html
+++ b/templates/darkgourds.html
@@ -1,64 +1,13 @@
-<!DOCTYPE html>
-<html>
-<body>
-<center> <h1>Dark Gourds </h1></center>
+{%extends "layout.html"%}
+{% block title %}Samplesets{% endblock %}
+{%block content%}
+<center> <h1>Dark Gourds </h1>
 
-<a href="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/darkgourdsplaylist.m3u/">Click here to open Playlist (.m3u) in your media player </a>
+<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=428181929/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="https://gregagainstthemacrocosm.bandcamp.com/album/dark-gourds-vol-1">Dark Gourds Vol. 1 by Dark Gourds</a></iframe>
+<p>My tinkerings with using synth/sampler software to make Halloween music that is creepier than "The Monster Mash" or "Thriller." 
+    This lead to considering 'composing' for indie horror movie or video game background sounds. 
+    Apparently it's cooler to use an AI for that now. </p>
+</center>
 
-
-<h1> Phantom Flatulence </h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/halloween5.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<h1> Darth Pumpking</h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/unrestretched.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<h1> Exit Us</h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/halloween1.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<h1> oUt oF pLaCe </h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/halloween4.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<h1> Attached to the head </h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/halloween2.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<h1> Insect Incest </h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/halloween6.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<h1> 1900909HOGzzzz </h1>
-<audio controls>  
-<source src="https://gregstullgainesvilletest1.herokuapp.com/static/mp3/halloween3.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+{%endblock%}
 
