--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,19 +38,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Greg Stull Soundlab</a>
+                    <a class="navbar-brand" href="{{url_for('index')}}">Greg's Website</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
-                        <li>
-                          <a href="{{url_for('index')}}">Samplesets</a>
-                        </li>
-                        <li>
-                          <a href="{{url_for('diy')}}">DIY</a>
-                        </li>
+                        <li><a href="{{url_for('soundsamples')}}">Samplesets</a></li>
                         <li><a href="{{ url_for('basslines') }}">Basslines</a></li>
+                        <li><a href="{{url_for('darkGourds')}}">DarkGourds</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
